# DA_study_projects

./: pyproject.toml
Word2Vec_s/notebooks/: process.ipynb
da_study/: __init__.py  extract.py  pyproject.toml
da_study/analyst_topic_5/: ABOUT.md  TASKS.md  extract.ipynb
da_study/data_3/: TASKS.md  dataset.py  work_book.ipynb
da_study/data_4/: extract.py  miniproject.ipynb  tasks_taxi_peru.md  taxi_peru.ipynb  taxi_peru_descript.md
da_study/data_4/Минипроект/: Задания (1).md  Описание.md
da_study/data_6/: openert.ipynb
da_study/rf_budget/: Prilozhenie_3_dannye_109-111_—_mes.xlsx  rf_budget.ipynb
da_study/taxi/: start.py  taxi_analyse.ipynb  Задания.md  Описание.md
