[tool.poetry]
name = "da-study"
version = "0.1.0"
description = ""
authors = ["Nick <nicklisits@gmail.com>"]
readme = "README.md"
packages = [{include = "da_study"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
sqlalchemy = "^2.0.15"
sketch = "^0.4.2"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
openpyxl = "^3.1.2"
plotly = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
