[tool.poetry]
name = "da-study"
version = "0.1.0"
description = ""
authors = ["Nick <nicklisits@gmail.com>"]
readme = "README.md"
packages = [{include = "da_study"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
sqlalchemy = "^2.0.15"
sketch = "^0.4.2"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
openpyxl = "^3.1.2"
plotly = "^5.15.0"
gensim = "^4.3.1"
keras = "^2.13.1"
nltk = "^3.8.1"
scikit-learn = "^1.3.0"
tensorflow-io-gcs-filesystem = { version = "^0.32.0", python = ">=3.7,<3.12" }
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
